fixed spacing

--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -67,7 +67,7 @@
 
 .list {
   display: flex;
-  gap: 1.5vw;
+  gap: 2.5vw;
 }
 
 
